--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use  with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  cached_network_image: ^2.2.0
+  material_design_icons_flutter: ^4.0.5345
 
 dev_dependencies:
   flutter_test:
