--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use  with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  cached_network_image: ^2.2.0
+  cached_network_image: 3.0.0
   material_design_icons_flutter: ^4.0.5345
+  path_provider: 2.0.2
+  qr_flutter: ^1.1.1
+  http: ^0.13.0
+  lottie: 1.0.1
 
 dev_dependencies:
   flutter_test:
